Seção de tags para formatação de texto concluída

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="#estrutura-basica">Estrutura básica de uma página HTML</a></li>
         <li><a href="#tags-html">Como funcionam as tags HTML</a></li>
         <li><a href="#tags-html-atributos">Tags HTML e seus atributos</a></li>
-        <li><a href="#">Tags para formatação e decoração de textos</a></li>
+        <li><a href="#tags-formatacao">Tags para formatação e decoração de textos</a></li>
         <li><a href="#">Criando listas</a></li>
         <li><a href="#">Trabalhando com links</a></li>
         <li><a href="#">Manipulando as abas do navegador</a></li>
@@ -73,6 +73,22 @@
     <ul>
         <li><strong>< img src="link" ></strong> o atributo <u>src</u> define o link da imagem;</li>
         <li><strong>< input type="text" ></strong> o atributo <u>type</u> define o tipo do campo.</li>
+    </ul>
+
+    <h2 id="tags-formatacao">Tags para formatação e decoração de textos</h2>
+
+    <p>O HTML possui uma gama enorme de tags para estilizar o conteúdo na tela, podendo até mesmo criar diversas combinações para deixar tudo ao estilo do fregues. Entre elas, existem:</p>
+
+    <ul>
+        <li>
+            <p>Efeito de rabisco com <strong>< del >< /del ></strong>: Palavra <del>rabiscada</del></p>
+        </li>
+        <li>
+            <p>Efeito de itálico com <strong>< i >< /i ></strong>: Palavra em <i>itálico</i></p>
+        </li>
+        <li>
+            <p>Efeito de marcação com <strong>< mark >< /mark ></strong>: Palavra <mark>marcada</mark></p>
+        </li>
     </ul>
 </body>
 </html>
