Seção de criação de listas adicionada

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#tags-html">Como funcionam as tags HTML</a></li>
         <li><a href="#tags-html-atributos">Tags HTML e seus atributos</a></li>
         <li><a href="#tags-formatacao">Tags para formatação e decoração de textos</a></li>
-        <li><a href="#">Criando listas</a></li>
+        <li><a href="#criando-listas">Criando listas</a></li>
         <li><a href="#">Trabalhando com links</a></li>
         <li><a href="#">Manipulando as abas do navegador</a></li>
         <li><a href="#">Ancoragem</a></li>
@@ -90,5 +90,30 @@
             <p>Efeito de marcação com <strong>< mark >< /mark ></strong>: Palavra <mark>marcada</mark></p>
         </li>
     </ul>
+
+    <h2 id="criando-listas">Criando listas</h2>
+
+    <p>Listas são formadas com uma tag mãe, definindo o tipo da lista, e os seus filhos, que seriam os itens dessa lista. As listas podem ser ordenadas <mark>< ol >< /ol ></mark> ou não ordenadas <mark>< ul >< /ul ></mark>. Haverão itens dentro dessas listas, determinadas pela tag <mark>< li >< /li ></mark>.</p>
+
+    <h3>Lista ordenada</h3>
+
+    Listas <u>ordenadas</u> são construídas a partir da tag <mark>< ol >< /ol ></mark>, e dentro dessa tag, os itens com a tag <mark>< li >< /li ></mark>.
+
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
+
+    <h3>Lista não ordenada</h3>
+
+    Listas <u>não ordenadas</u> são construídas a partir da tag <mark>< ul >< /ul ></mark>, e dentro dessa tag, os itens com a tag <mark>< li >< /li ></mark>.
+
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+    
 </body>
 </html>
