Seção sobre os links adicionada

--- a/index.html
+++ b/index.html
@@ -18,9 +18,7 @@
         <li><a href="#tags-html-atributos">Tags HTML e seus atributos</a></li>
         <li><a href="#tags-formatacao">Tags para formatação e decoração de textos</a></li>
         <li><a href="#criando-listas">Criando listas</a></li>
-        <li><a href="#">Trabalhando com links</a></li>
-        <li><a href="#">Manipulando as abas do navegador</a></li>
-        <li><a href="#">Ancoragem</a></li>
+        <li><a href="#links-html">Trabalhando com links</a></li>
         <li><a href="#">Fontes e referências</a></li>
     </ul>
 
@@ -115,5 +113,20 @@
         <li>Item 3</li>
     </ul>
     
+    <h2 id="links-html">Trabalhando com links</h2>
+
+    <p>Um link pode levar o usuário para uma outra página, ou outro site, e é definido pela tag <mark>< a >< /a ></mark>. Para que funcione corretamente, o atributo `href` precisa estar inserido com o link de destino. Exemplo: <mark>< a href="link" >Clique aqui< /a ></mark></p>
+
+    <h3>Abrindo páginas em outras abas</h3>
+
+    <p>Por padrão, o site abre na mesma aba, ou seja, muda a página atual, consequentemente saíndo do seu site. É possível mudar esse comportamento, por exemplo, ao clicar no link, abrir uma nova aba, preservando a aba original. Para isso, existe o atributo <i>target</i> que pode receber o valor <mark>_blank</mark>.</p>
+
+    <p>Resumindo, ao clicar no link, uma nova aba será aberta direcionando até a página definida pelo <mark>href</mark>. Exemplo: <mark>< a href="link" target="_blank" >Clique aqui< /a ></mark></p>
+
+    <h3>Ancoragem</h3>
+
+    <p>Além de navegar para outras páginas e sites, é possível utilizar a tag <mark>< a >< /a ></mark> para navegar entre diferentes pedaços de conteúdo dentro da própria página, cria-se uma seção de links de navegação.</p>
+
+    <p>Para a definição das seções, é utilizado o símbolo <mark>#</mark> seguido do <mark>id</mark> da tag. A tag alvo <i>precisa</i> ter um id, pois esse mesmo id será utilizado para identificação na ancoragem.</p>
 </body>
 </html>
