Seção de fontes e referências adicionada

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <li><a href="#tags-formatacao">Tags para formatação e decoração de textos</a></li>
         <li><a href="#criando-listas">Criando listas</a></li>
         <li><a href="#links-html">Trabalhando com links</a></li>
-        <li><a href="#">Fontes e referências</a></li>
+        <li><a href="#fontes-referencias">Fontes e referências</a></li>
     </ul>
 
     <hr>
@@ -128,5 +128,14 @@
     <p>Além de navegar para outras páginas e sites, é possível utilizar a tag <mark>< a >< /a ></mark> para navegar entre diferentes pedaços de conteúdo dentro da própria página, cria-se uma seção de links de navegação.</p>
 
     <p>Para a definição das seções, é utilizado o símbolo <mark>#</mark> seguido do <mark>id</mark> da tag. A tag alvo <i>precisa</i> ter um id, pois esse mesmo id será utilizado para identificação na ancoragem.</p>
+
+    <h2 id="fontes-referencias">Fontes e referências</h2>
+
+    <ul>
+        <li><a href="https://www.w3schools.com/htmL/html_id.asp">Atributo ID</a></li>
+        <li><a href="https://www.youtube.com/watch?v=E6CdIawPTh0">Seu primeiro código HTML | Curso em Vídeo</a></li>
+        <li><a href="https://www.w3schools.com/TAGs/">Todas as tags HTML</a></li>
+        <li><a href="https://www.w3schools.com/tags/tag_font.asp">Tag font não suportada</a></li>
+    </ul>
 </body>
 </html>
