Links de navegação para o topo adicionados

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Aprendizados HTML</title>
 </head>
 <body>
-    <h1>Curso: Introdução ao HTML na prática</h1>
+    <h1 id="topo">Curso: Introdução ao HTML na prática</h1>
 
     <hr>
 
@@ -24,9 +24,9 @@
 
     <hr>
 
-    <h2 id="estrutura-basica">Estrutura básica de uma página HTML</h2>
+    <h2 id="estrutura-basica">Estrutura básica de uma página HTML<a href="#topo"><small>[Voltar]</small></a></h2>
 
-    <p>A página inicial do site é, por uma convenção, chamada de `index.html`. Por padrão, diversos sites espalhados pela internet estarão utilizando essa nomenclatura para sua página principal.</p>
+    <p>A página inicial do site é, por uma convenção, chamada de <i><u>index.html</u></i>. Por padrão, diversos sites espalhados pela internet estarão utilizando essa nomenclatura para sua página principal.</p>
 
     <p>Um site é formado, de basicamente, por três <i>tags principais</i>:</p>
 
@@ -38,7 +38,7 @@
 
     <p>Essas três tags HTML iniciais definem o básico do corpo de uma página HTML, dividindo a parte das configurações da página e a parte que o usuário vê (o corpo da página).</p>
 
-    <h2 id="tags-html">Como funcionam as tags HTML</h2>
+    <h2 id="tags-html">Como funcionam as tags HTML<a href="#topo"><small>[Voltar]</small></a></h2>
 
     <p>A página é desenvolvida como se fosse um quebra cabeças, cada pedaço tem um lugar a ser encaixado. E se todos os pedaços forem encaixadas da forma correta, o quebra cabeças estará completo e perfeito.</p>
     <p>As tags HTML podem ser abertas e fechadas, delimitando seu conteúdo entre a abertura e o fechamento. Sendo assim, ao escrever, por exemplo, um parágrafo, o texto estará posicionado no meio dos delimitadores. Uma tag que possui abertura e fechamento é geralmente escrita da seguinte forma: <mark>< tag > conteúdo < /tag ></mark></p>
@@ -59,7 +59,7 @@
         <li><strong>< hr ></strong> cria uma divisão, uma linha na tela.</li>
     </ul>
 
-    <h2 id="tags-html-atributos">Tags HTML e seus atributos</h2>
+    <h2 id="tags-html-atributos">Tags HTML e seus atributos<a href="#topo"><small>[Voltar]</small></a></h2>
 
     <p>Tags HTML podem possuir <strong>atributos</strong>, que modificam o seu comportamento, determinam regras e delimitadores, podendo ser aplicadas em diversas situações. Um exemplo seria definir um campo de entrada de informações para que ele aceitasse apenas números.</p>
     
@@ -73,7 +73,7 @@
         <li><strong>< input type="text" ></strong> o atributo <u>type</u> define o tipo do campo.</li>
     </ul>
 
-    <h2 id="tags-formatacao">Tags para formatação e decoração de textos</h2>
+    <h2 id="tags-formatacao">Tags para formatação e decoração de textos<a href="#topo"><small>[Voltar]</small></a></h2>
 
     <p>O HTML possui uma gama enorme de tags para estilizar o conteúdo na tela, podendo até mesmo criar diversas combinações para deixar tudo ao estilo do fregues. Entre elas, existem:</p>
 
@@ -89,7 +89,7 @@
         </li>
     </ul>
 
-    <h2 id="criando-listas">Criando listas</h2>
+    <h2 id="criando-listas">Criando listas<a href="#topo"><small>[Voltar]</small></a></h2>
 
     <p>Listas são formadas com uma tag mãe, definindo o tipo da lista, e os seus filhos, que seriam os itens dessa lista. As listas podem ser ordenadas <mark>< ol >< /ol ></mark> ou não ordenadas <mark>< ul >< /ul ></mark>. Haverão itens dentro dessas listas, determinadas pela tag <mark>< li >< /li ></mark>.</p>
 
@@ -113,7 +113,7 @@
         <li>Item 3</li>
     </ul>
     
-    <h2 id="links-html">Trabalhando com links</h2>
+    <h2 id="links-html">Trabalhando com links<a href="#topo"><small>[Voltar]</small></a></h2>
 
     <p>Um link pode levar o usuário para uma outra página, ou outro site, e é definido pela tag <mark>< a >< /a ></mark>. Para que funcione corretamente, o atributo `href` precisa estar inserido com o link de destino. Exemplo: <mark>< a href="link" >Clique aqui< /a ></mark></p>
 
@@ -129,7 +129,7 @@
 
     <p>Para a definição das seções, é utilizado o símbolo <mark>#</mark> seguido do <mark>id</mark> da tag. A tag alvo <i>precisa</i> ter um id, pois esse mesmo id será utilizado para identificação na ancoragem.</p>
 
-    <h2 id="fontes-referencias">Fontes e referências</h2>
+    <h2 id="fontes-referencias">Fontes e referências<a href="#topo"><small>[Voltar]</small></a></h2>
 
     <ul>
         <li><a href="https://www.w3schools.com/htmL/html_id.asp">Atributo ID</a></li>
